infrastructure/alerting/tpi-1/httproute-alertmanager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: alerting
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.nas.${domain_absolutist_it:=absolutist.it}
spec:
  parentRefs:
  - name: internal-gw
    namespace: infrastructure
  hostnames:
  - "alertmanager.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - name: vmalertmanager-tpi-1
      port: 9093
