infrastructure/alerting/tpi-1/httproute-vmetrics.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalert-vmetrics
  namespace: alerting
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.${domain_absolutist_it:=absolutist.it}
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "metrics-alerts.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - name: vmalert-vmetrics-tpi-1
      port: 8080
